# partage-sup

./: .gitmodules  README.md  produce-coling.ini  produce.ini  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  setup.cfg
config/: baseline.json  parser.100.json  parser.json  split.json  tagger.json  train.json
config/obsolete/: tagger.json
supertagger/: __main__.py  config.py  data.py  eval.py  model.py  tag.py  train.py
supertagger/model/: __init__.py  dep_parser.py  joint.py  stats.py  tagger.py  utils.py
supertagger/neural/: biaffine.py  bilstm.py  crf.py  encoding.py  mlp.py  pro_training.py  proto.py  training.py  utils.py
supertagger/neural/embedding/: fasttext.py  pretrained.py
supertagger/tagger/: model.py  pro_model.py
supertagger/tasks/: train.py  train_tagger.py
