[metadata]
name = supertagger
version = 0.1.0
author = Jakub Waszczuk
author_email = waszczuk.kuba@gmail.com
url = https://github.com/kawu/partage-sup
description = TAG/TWG Supertagger
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    nlp

[options]
packages = find:
install_requires =
  torch==1.6.0
  fasttext==0.9.2
# scripts =
#     supertagger
